# pydocfix

./: Cargo.toml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
src/pydocfix/: __init__.py  checker.py  cli.py  config.py  fixer.py  rules.py
src/pydocfix/rules/: __init__.py  _base.py  d200.py  d401.py  d402.py  d403.py  d404.py  d405.py  d406.py  d407.py  d408.py  d409.py
src/pydocfix/rules/prm/: __init__.py  prm001.py  prm004.py  prm005.py  prm006.py  prm007.py  prm008.py  prm009.py  prm101.py
src/pydocfix/rules/rtn/: __init__.py  rtn101.py
src/pydocfix/rules/sum/: __init__.py  sum002.py
src/pydocfix/rules/yld/: __init__.py
tests/: test_checker.py  test_cli.py  test_config.py  test_fixer.py  test_rules.py
